--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=master,tocarialchapter]{thuthesis}
+\documentclass[degree=bachelor,tocarialchapter]{thuthesis}
 % 选项
 %   degree=[bachelor|master|doctor|postdoctor], % 必选，学位类型
 %   language=[chinese|english], % 可选（默认：chinese），论文的主要语言
@@ -35,7 +35,7 @@
 %%% 正文部分
 \mainmatter
 \input{data/Algorithm}
-
+\input{data/Intro.tex}
 
 
 %%% 其它部分
