--- a/main.tex
+++ b/main.tex
@@ -34,8 +34,9 @@
 
 %%% 正文部分
 \mainmatter
-\input{data/Algorithm}
 \input{data/Intro.tex}
+\input{data/Algorithm}
+\input{data/Hardware}
 
 
 %%% 其它部分
