--- a/data/Intro.tex
+++ b/data/Intro.tex
@@ -1,3 +1,112 @@
 \chapter{引言}
 \label{cha:Intro}
 
+\section{背景}
+
+分布式可再生能源（如风电、太阳能等）作为可持续获取的清洁能源，近年来受到各国重视，发电量和节点数也与日俱增，如表~\ref{tab:PowerGenerated}，5G技术和泛在电力物联网建设也到了实用阶段。
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[]
+    \centering
+    \begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \multirow{3}{*}{地  区} & \multirow{3}{*}{Region} & \multicolumn{3}{c|}{风力发电量} & \multicolumn{3}{c|}{太阳能发电量} \\ \cline{3-8} 
+     &  & \multicolumn{3}{c|}{(Wind Power Generation)} & \multicolumn{3}{c|}{(Solar Power Generation)} \\ \cline{3-8} 
+     &  & 2015 & 2016 & 2017 & 2015 & 2016 & 2017 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    北  京 & Beijing & 2.57 & 3.27 & 3.46 & 0.51 & 1.07 & 1.36 \\ \hline
+    天  津 & Tianjin & 6.28 & 5.84 & 5.91 & 0.03 & 0.16 & 1.61 \\ \hline
+    河  北 & Hebei & 186.18 & 209.32 & 257.54 & 9.47 & 26.54 & 56.22 \\ \hline
+    山  西 & Shanxi & 85.80 & 120.28 & 146.06 & 3.24 & 14.45 & 46.54 \\ \hline
+    内蒙古 & Inner Mongolia & 407.88 & 464.18 & 551.43 & 56.99 & 83.26 & 114.19 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    辽  宁 & Liaoning & 111.84 & 128.93 & 143.50 & 1.23 & 3.41 & 6.17 \\ \hline
+    吉  林 & Jilin & 72.66 & 84.66 & 87.64 & 0.80 & 0.91 & 1.86 \\ \hline
+    黑龙江 & Heilongjiang & 64.67 & 79.62 & 90.70 & 0.16 & 0.44 & 1.22 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    上  海 & Shanghai & 4.79 & 6.70 & 16.64 & 0.35 & 0.45 & 0.62 \\ \hline
+    江  苏 & Jiangsu & 59.25 & 94.12 & 116.65 & 19.34 & 41.15 & 61.94 \\ \hline
+    浙  江 & Zhejiang & 16.42 & 23.42 & 23.59 & 7.65 & 22.17 & 23.52 \\ \hline
+    安  徽 & Anhui & 20.57 & 34.17 & 39.74 & 3.74 & 20.67 & 45.25 \\ \hline
+    福  建 & Fujian & 44.97 & 50.26 & 62.40 & 4.71 & 3.46 & 2.38 \\ \hline
+    江  西 & Jiangxi & 11.33 & 18.77 & 29.84 & 2.34 & 11.13 & 15.39 \\ \hline
+    山  东 & Shandong & 102.91 & 142.51 & 166.08 & 21.05 & 29.96 & 73.60 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    河  南 & Henan & 13.69 & 18.01 & 33.29 & 0.90 & 13.06 & 26.91 \\ \hline
+    湖  北 & Hubei & 17.19 & 40.40 & 52.18 & 1.36 & 11.40 & 11.54 \\ \hline
+    湖  南 & Hunan & 28.35 & 39.63 & 45.24 & 0.37 & 0.63 & 4.73 \\ \hline
+    广  东 & Guangdong & 55.41 & 47.44 & 55.07 & 1.81 & 4.47 & 10.55 \\ \hline
+    广  西 & Guangxi & 5.91 & 13.81 & 24.29 & 0.38 & 0.84 & 2.69 \\ \hline
+    海  南 & Hainan & 5.95 & 6.41 & 5.47 & 1.94 & 2.14 & 3.01 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    重  庆 & Chongqing & 2.09 & 4.65 & 6.00 &  &  & 0.55 \\ \hline
+    四  川 & Sichuan & 10.19 & 17.90 & 37.80 & 1.12 & 6.06 & 16.92 \\ \hline
+    贵  州 & Guizhou & 39.00 & 55.17 & 60.15 &  & 0.88 & 4.61 \\ \hline
+    云  南 & Yunnan & 92.28 & 155.32 & 194.40 & 5.68 & 21.03 & 27.58 \\ \hline
+    西  藏 & Tibet &  &  &  & 2.61 & 2.88 & 4.49 \\ \hline
+     &  &  &  &  &  &  &  \\ \hline
+    陕  西 & Shaanxi & 27.87 & 37.46 & 50.86 & 8.07 & 13.34 & 34.25 \\ \hline
+    甘  肃 & Gansu & 126.70 & 136.44 & 187.60 & 59.12 & 60.19 & 73.48 \\ \hline
+    青  海 & Qinghai & 6.59 & 10.01 & 18.61 & 72.67 & 89.91 & 112.57 \\ \hline
+    宁  夏 & Ningxia & 80.51 & 125.47 & 149.32 & 40.78 & 51.34 & 71.79 \\ \hline
+    新  疆 & Xinjiang & 147.83 & 196.55 & 288.76 & 59.38 & 78.47 & 109.64 \\ \hline
+    \end{tabular}
+    \caption{分地区核能、风力、太阳能发电量}
+    \label{tab:PowerGenerated}
+\end{table}
+
+在众多节点需要优化的情境下，传统的集中式优化存在通信堵塞、节点故障、算力不足等问题。
+
+面对这一挑战，本文受区块链技术的PoW和PoS协议启发，提出了一套用于电力系统经济调度的分布式算法，依靠众多的节点计算，实现了去中心化，提高了电力系统的优化能力，可以解决上述问题。
+
+\section{国内外研究现状}
+
+总体来说，国内外目前对于共识算法的研究基本停留在软件领域，极少有迁移到分布式系统进行测试的研究，故很多硬件层面存在的问题如节点故障、通信中断等问题没有解决。这也是本文要解决的主要问题之一。
+
+\subsection{比特币和区块链}
+
+自从中本聪提出了比特币\cite{nakamoto2008bitcoin}，国内外很多学者开始研究比特币在各个领域的应用，其中不乏物联网方向的研究\cite{zhang2017iot}。也有一些提到了在电力市场计价方面的应用，但大部分是在P2P交易过程中将区块链作为加密货币来使用\cite{tai2016electricity}。
+
+笔者曾认真考虑在此场景下使用成熟的区块链原生算法作为底层，单后来发现在电力市场价格共识这一特殊领域，并没有必要使用区块链技术。
+
+区块链技术最初是为了解决公共账本的信用问题（拜占庭问题），但由于电力物联网中所有的电表（出力/能耗证明）都是经过官方认证的，所以发出的报文经过证书加密，收到的报文首先验证是否符合规则，不符合的舍弃，所以进入算法的数据本身一定是可信的，不存在拜占庭问题（恶意节点提交的错误信息），只可能丢包。
+
+\subsection{共识算法}
+
+在共识算法方面，一致性问题是分布式领域最基础、最重要的问题，也是半个世纪以来的研究热点。
+
+一般地，把出现故障（Crash 或 Fail-stop，即不响应）但不会伪造信息的情况称为“非拜占庭错误（Non-Byzantine Fault）”或“故障错误（Crash Fault）”；伪造信息恶意响应的情况称为“拜占庭错误”（Byzantine Fault），对应节点为拜占庭节点。显然，后者场景中因为存在“捣乱者”更难达成共识。值得庆幸的是，在本文中我们不会涉及到拜占庭错误。
+
+根据解决的场景是否允许拜占庭错误情况，共识算法可以分为 Crash Fault Tolerance (CFT) 和 Byzantine Fault Tolerance（BFT）两类。
+
+对于非拜占庭错误的情况，已经存在不少经典的算法，包括 Paxos（1990 年）、Raft（2014 年）及其变种等。这类容错算法往往性能比较好，处理较快，容忍不超过一半的故障节点。
+
+对于要能容忍拜占庭错误的情况，包括 PBFT（Practical Byzantine Fault Tolerance，1999 年）为代表的确定性系列算法、PoW（1997 年）为代表的概率算法等。确定性算法一旦达成共识就不可逆转，即共识是最终结果；而概率类算法的共识结果则是临时的，随着时间推移或某种强化，共识结果被推翻的概率越来越小，最终成为事实上结果。拜占庭类容错算法往往性能较差，容忍不超过 1/3 的故障节点。
+
+此外，XFT（Cross Fault Tolerance，2015 年）等最近提出的改进算法可以提供类似 CFT 的处理响应速度，并能在大多数节点正常工作时提供 BFT 保障。
+
+Algorand 算法（2017 年）基于 PBFT 进行改进，通过引入可验证随机函数解决了提案选择的问题，理论上可以在容忍拜占庭错误的前提下实现更好的性能（1000+ TPS）。
+
+Paxos 问题是指分布式的系统中存在故障（crash fault），但不存在恶意（corrupt）节点的场景（即可能消息丢失或重复，但无错误消息）下的共识达成问题。这也是分布式共识领域最为常见的问题。因为最早是 Leslie Lamport 用 Paxos 岛的故事模型来进行描述，而得以命名。解决 Paxos 问题的算法主要有 Paxos 系列算法和 Raft 算法。
+
+\begin{figure}[htbp] % use float package if you want it here
+    \centering
+    \includegraphics[height=8cm]{paper.png}
+    \caption{分布式经济调度算法对比}
+    \label{fig:Directed-graph}
+\end{figure}
+
+\subsection{区域级解耦与节点级解耦}
+
+分布式经济调度问题的相关研究，可以划分为区域级解耦与节点级解耦：
+
+区域级解耦即讲整个大电网分解成多个子区域，在区域和区域之间进行信息交换。这方面的研究较为成熟，主要算法包括拉格朗日函数松弛、增广拉格朗日松弛、交替方向乘子法、最优性条件松弛、边际等效、Benders割等。
+
+由于区域级解耦是在区域内部集中优化之后再在区域之间优化，面向未来的泛在电力物联网无法使用，我们暂时不考虑区域级解耦。
+
+节点级解耦则考虑的是现实场景下的一致性问题，通过成本微增率共识原则求解最优解。
+
+\section{本研究意义}
+
+本文利用改进的分布式算法求解节点级解耦的一致性问题，并将算法在硬件上成功运行展示。解决了一些硬件特有的问题并尽可能控制成本，为将来在泛在电力物联网中广泛运用打好了基础。
