--- a/main.tex
+++ b/main.tex
@@ -64,11 +64,11 @@
 
 %% 附录
 \begin{appendix}
-\input{data/appendix01}
+%\input{data/appendix01}
 \end{appendix}
 
 %% 个人简历
-\input{data/resume}
+%\input{data/resume}
 
 %% 本科生进行格式审查是需要下面这个表格，答辩可能不需要。选择性留下。
 % 综合论文训练记录表
