--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -32,3 +32,17 @@
   url =         {https://github.com/xueruini/thuthesis},
   year =        2017,
 }
+
+
+@INPROCEEDINGS{8706900,
+author={S. {Ali} and S. {Ahmed} and S. N. {Khan Marwat}},
+booktitle={2018 International Symposium on Recent Advances in Electrical Engineering (RAEE)},
+title={A practical approach to consensus based control of multi-agent systems},
+year={2018},
+volume={},
+number={},
+pages={1-5},
+keywords={data mining;multi-agent systems;pattern clustering;power engineering computing;power generation dispatch;smart power grids;economic dispatch problem;smart grid;distributed consensus approach;intelligent agent;autonomous agent;practical approach;consensus based control;multiagent systems;wireless sensor networks;robotics;data mining;practical systems;consensus algorithm;Smart grids;Mathematical model;Consensus algorithm;Multi-agent systems;Control systems;Power generation;Economics;Consensus;Multi-agent;autonomous;Smart grid;Arduino;Distributed;EDP},
+doi={10.1109/RAEE.2018.8706900},
+ISSN={null},
+month={Oct},}
