--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -35,3 +35,11 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 上述算法的物理含义即：
 
 在第i次迭代过程中，同时对和每个节点相连通的所有节点取平均并赋值给此节点\cite{8706900}。
+
+用过渡矩阵来说就是：Q阵中每个元素为对应邻接矩阵元素除以此节点出度（发出的边的总数）。
+
+\begin{equation}
+    q_{i j}=\frac{a_{i j}}{\sum_{k=1}^{N} a_{i k}}
+\end{equation}
+
+但此时收敛速度并非最快，在下一节中将会进行优化。
