--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,9 @@
 \mainmatter
 \input{data/Intro.tex}
 \input{data/Simple.tex}
-\input{data/Algorithm}
-\input{data/Hardware}
+\input{data/Algorithm.tex}
+\input{data/Example.tex}
+\input{data/Hardware.tex}
 
 
 %%% 其它部分
