--- a/data/Platform.tex
+++ b/data/Platform.tex
@@ -2,5 +2,27 @@
 \label{cha:Platform}
 
 \section{平台设计}
+形式：
 
-\subsection{定位模块的设计}
+每个小车为一个数据点，在1-3维坐标系内动态运动（如果和ShapeBots\cite{suzuki2019shapebots}一样具备升降平台或者和SwarmOS一样具备可变色LED点阵则可以进行三维变量显示）
+
+也可以每个小车作为一个通信节点（在电力市场的应用场景下是一个机组节点），用屏幕/位置/RGB颜色/高度直观的显示迭代的过程。
+
+即插即用的实现：放入/取出小车，新的迭代随即开始。
+
+\subsection{仿真}
+https://ryosuzuki.github.io/shapebots-simulator/
+
+src https://github.com/ryosuzuki/shapebots-simulator
+
+\subsection{定位方法}
+
+\subsection{底盘}
+
+\subsection{主控板}
+
+\subsection{扩展接口}
+
+\subsection{实物可视化界面}
+
+\subsection{UI}
