--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -46,3 +46,12 @@ keywords={data mining;multi-agent systems;pattern clustering;power engineering c
 doi={10.1109/RAEE.2018.8706900},
 ISSN={null},
 month={Oct},}
+
+
+@inproceedings{suzuki2019shapebots,
+  title={ShapeBots: Shape-changing Swarm Robots},
+  author={Suzuki, Ryo and Zheng, Clement and Kakehi, Yasuaki and Yeh, Tom and Do, Ellen Yi-Luen and Gross, Mark D and Leithinger, Daniel},
+  booktitle={Proceedings of the 32nd Annual ACM Symposium on User Interface Software and Technology},
+  pages={493--505},
+  year={2019}
+}
