--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -55,3 +55,48 @@ month={Oct},}
   pages={493--505},
   year={2019}
 }
+
+@phdthesis{ozgur2018cellulo,
+  title={Cellulo: Tangible Haptic Swarm Robots for Learning},
+  author={{\"O}zg{\"u}r, Ayberk},
+  year={2018},
+  school={Ecole Polytechnique F{\'e}d{\'e}rale de Lausanne}
+}
+
+@inproceedings{le2016zooids,
+  title={Zooids: Building blocks for swarm user interfaces},
+  author={Le Goc, Mathieu and Kim, Lawrence H and Parsaei, Ali and Fekete, Jean-Daniel and Dragicevic, Pierre and Follmer, Sean},
+  booktitle={Proceedings of the 29th Annual Symposium on User Interface Software and Technology},
+  pages={97--109},
+  year={2016}
+}
+
+@inproceedings{ozgur2017cellulo,
+  title={Cellulo: Versatile handheld robots for education},
+  author={{\"O}zg{\"u}r, Ayberk and Lemaignan, S{\'e}verin and Johal, Wafa and Beltran, Maria and Briod, Manon and Pereyre, L{\'e}a and Mondada, Francesco and Dillenbourg, Pierre},
+  booktitle={2017 12th ACM/IEEE International Conference on Human-Robot Interaction (HRI},
+  pages={119--127},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{mondada2009puck,
+  title={The e-puck, a robot designed for education in engineering},
+  author={Mondada, Francesco and Bonani, Michael and Raemy, Xavier and Pugh, James and Cianci, Christopher and Klaptocz, Adam and Magnenat, Stephane and Zufferey, Jean-Christophe and Floreano, Dario and Martinoli, Alcherio},
+  booktitle={Proceedings of the 9th conference on autonomous robot systems and competitions},
+  volume={1},
+  number={CONF},
+  pages={59--65},
+  year={2009},
+  organization={IPCB: Instituto Polit{\'e}cnico de Castelo Branco}
+}
+
+@inproceedings{betthauser2014wolfbot,
+  title={WolfBot: A distributed mobile sensing platform for research and education},
+  author={Betthauser, Joseph and Benavides, Daniel and Schornick, Jeff and O'Hara, Neal and Patel, Jimit and Cole, Jeremy and Lobaton, Edgar},
+  booktitle={Proceedings of the 2014 Zone 1 Conference of the American Society for Engineering Education},
+  pages={1--8},
+  year={2014},
+  organization={IEEE}
+}
+
