Localization-methods-Table

--- a/data/Intro.tex
+++ b/data/Intro.tex
@@ -94,7 +94,7 @@ Paxos 问题是指分布式的系统中存在故障（crash fault），但不存
     \centering
     \includegraphics[height=8cm]{paper.png}
     \caption{分布式经济调度算法对比}
-    \label{fig:Directed-graph}
+    \label{fig:CompareAlgorithm}
 \end{figure}
 
 \subsection{区域级解耦与节点级解耦}
