--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,6 @@
-\documentclass[degree=bachelor,tocarialchapter]{thuthesis}
+\documentclass[degree=bachelor,tocarialchapter,table,xcdraw]{thuthesis}
+% 在\documentclass中加入了 ,table,xcdraw 解决了用于表格颜色填充的宏包 \usepackage[table,xcdraw]{xcolor} 导致的xcolor不同参数重复声明的问题
+
 % 选项
 %   degree=[bachelor|master|doctor|postdoctor], % 必选，学位类型
 %   language=[chinese|english], % 可选（默认：chinese），论文的主要语言
@@ -9,6 +11,8 @@
 
 % 所有其它可能用到的包都统一放到这里了，可以根据自己的实际添加或者删除。
 \usepackage{thuthesis}
+
+\usepackage{lscape}     % for landscape table
 
 % 定义所有的图片文件在 figures 子目录下
 \graphicspath{{figures/}}
