--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -100,3 +100,13 @@ month={Oct},}
   organization={IEEE}
 }
 
+@article{gfrerrer2008geometry,
+  title={Geometry and kinematics of the Mecanum wheel},
+  author={Gfrerrer, Anton},
+  journal={Computer Aided Geometric Design},
+  volume={25},
+  number={9},
+  pages={784--791},
+  year={2008},
+  publisher={Elsevier}
+}
